src/assets/UIComponents/css/style.css
/* ... */
.footerLinks h2 {
  display: flex;
  align-items: center;
  font-size: 30px;
  font-weight: 700;
  line-height: 43.79px;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
  color: var(--color3);
}
.footerLinks p {
  font-size: 20px;
  font-weight: 500;
  line-height: 30.91px;
  /* text-align: justify; */
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

.footerLinks ul li {
  font-size: 20px;
  font-weight: 700;
  line-height: 30.91px;
  /* text-align: justify; */
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}
.footerLinks ul li h3,
.footerLinks ol li h3 {
  font-size: 20px;
}

.footerLinks ul li span {
  font-weight: 500;
}

.footerLinks .sublist {
  color: var(--color1);
  font-weight: 600;
}

.footerLinks ol li {
  font-size: 20px;
  font-weight: 700;
  line-height: 30.91px;
  /* text-align: justify; */
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

.footerLinks a {
  color: var(--color6);
}

.carousel-indicators {
  margin-bottom: -1rem;
}

.carousel-indicators button {
  height: 15px !important;
  width: 15px !important;
  border-radius: 50%;
  background-color: var(--color1) !important;
}
.second-image {
  right: 7%;
  top: 60%;
}

.imgUpload {
  font-size: 20px !important;
  font-weight: 700 !important;
  line-height: 22.04px !important;
  text-align: left !important;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
  color: #8d8d8d !important;
}

.hide-logo .logo {
  display: none;
}

.containerCheck {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Hide the browser's default checkbox */
.containerCheck input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
  border: 1.09px solid #4a4a49;
  font-size: 18px;
  font-weight: 400;
  line-height: var(--lineHeightsmd);
  letter-spacing: var(--letterSpacingmd);
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
  color: #6d6d6d;
  border-radius: 5px;
}

/* On mouse-over, add a grey background color */

/* When the checkbox is checked, add a blue background */
.containerCheck input:checked ~ .checkmark {
  background-color: var(--color1);
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.containerCheck input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.containerCheck .checkmark:after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.list,
.list:focus {
  outline: none;
  box-shadow: none;
}

.hide-logo .logo {
  display: none;
}
.iti {
  width: 100%;
  display: flex !important;
  align-items: center;
  border-bottom: 1px dotted;
}
.iti .dropdown-menu.show {
  overflow: scroll;
  height: 50vh;
}

.form-floating > .form-control-plaintext ~ label,
.form-floating > .form-control:focus ~ label,
.form-floating > .form-control:not(:placeholder-shown) ~ label,
.form-floating > .form-select ~ label {
  color: rgba(var(--bs-body-color-rgb), 0.65);
  transform: scale(0.85) translateY(-1.5rem) translateX(0.15rem);
}

.delegate-form .section7 {
  background-image: url(../images/delegateBg.svg);
  background-repeat: no-repeat;
  background-size: cover;
  /* height: 127vh; */
  height: auto;
}

.yT {
  height: 360px;
}

.iti__flag {
  display: none;
}
.iti__selected-flag {
  display: flex;
  align-items: center;
}

#phone {
  /* padding-left: 10px;
  padding-bottom: 0; */
  border-bottom: none;
  padding: 1px 10px;
}
.iti.separate-dial-code .iti__selected-flag,
.iti.separate-dial-code.iti--allow-dropdown.iti-sdc-2 .iti__selected-flag,
.iti.separate-dial-code.iti--allow-dropdown.iti-sdc-3 .iti__selected-flag,
.iti.separate-dial-code.iti--allow-dropdown.iti-sdc-4 .iti__selected-flag {
  width: auto !important;
  cursor: pointer !important;
}

.form-group label {
  font-weight: 400 !important;
  padding-bottom: 10px;
}

.carousel-control-next,
.carousel-control-prev {
  width: 4%;
}

.head .nav-item:hover {
  background-color: var(--color3);
  border-radius: 5px;
}
/* .head .nav-item a{
  padding: 6.5px;
} */
.head .nav-item:hover a {
  color: var(--color2);
}
.head .nav-item.active {
  background-color: var(--color3);
  border-radius: 5px;
}

.head .nav-item.active a {
  color: var(--color2);
}

.hover-dropdown-content a {
  color: var(--color6) !important;
}

.btn-success {
  background-color: var(--color3);
}

.partner_carousel ul li img {
  width: 100%;
}
.modal {
  background: #000000a1;
}

.modal-dialog .modal-close {
  position: absolute;
  right: 19px;
  z-index: 1;
  top: -1.5rem;
  border-radius: 10px;
}

.come-from-modal .modal-content {
  background-image: url(../../../assets/UIComponents/images/bg2.png);
}

.pix {
  height: 100px;
  width: 100px;
}

.cpImg {
  height: 480px;
}

.head ul li a,
.head ul li .dropbtn,
.head form,
.head form a {
  font-weight: 400;
  font-size: 14px;
  padding: 6.5px;
  letter-spacing: 1px;
}

.head form a {
  font-weight: 400 !important;
}

#international_committee .modal-content {
  background: linear-gradient(180deg, #ffffff 0%, #e8f0cc 100%);
}

#international_committee table th,
#international_committee table td {
  background-color: transparent;
}
/* ... */

